logs/orderbook_listener_KXNBASPREAD-25NOV05BKNIND-IND12_20251105_184441.log
  File "/Users/twilliams/Kalshi_MM/Getdata/orderBookListener.py", line 63
    if hasattr(order_book_response, 'model_dump'):
    ^^
IndentationError: expected an indented block after 'else' statement on line 61
